Replaced manual copy and Arrays.asList() with List.of()